--- a/playbooks/ops/consoleup/apply.yaml
+++ b/playbooks/ops/consoleup/apply.yaml
@@ -35,7 +35,7 @@
 - name: Start configtxlator
   command: >-
     docker run -d --network {{ NETNAME }} --name configtxlator.{{ NETNAME }} --hostname configtxlator.{{ NETNAME }}
-    hyperledger/fabric-tools:{{ IMAGETAG }}
+    chinyati/fabric-tools:arm64-2.1.0
     /bin/bash -c "/usr/local/bin/configtxlator start --CORS=*"
 
 - name: Get current org ca name
