--- a/playbooks/ops/netup/dockerapply.yaml
+++ b/playbooks/ops/netup/dockerapply.yaml
@@ -33,7 +33,7 @@
     -e COUCHDB_USER=admin -e COUCHDB_PASSWORD={{ item.adminPassword }}
     -v {{ item.fullname }}:/opt/couchdb/data
     {{ container_options }}
-    --hostname {{ item.fullname }} hyperledger/fabric-couchdb:latest
+    --hostname {{ item.fullname }} chinyati/fabric-couchdb:arm64-0.4.20 
   with_items: "{{ allcouchdbs }}"
   when: (DB_TYPE|lower) == "couchdb"
 
@@ -46,7 +46,7 @@
     -v {{ mpath }}/{{item.org}}/peers/{{item.fullname}}/tls:/etc/hyperledger/fabric/tls
     -v {{ item.fullname }}:/var/hyperledger/production
     {{ container_options }}
-    hyperledger/fabric-peer:{{ fabric.release }} peer node start
+    chinyati/fabric-peer:arm64-2.1.0 peer node start
   with_items: "{{ allpeers }}"
   register: peerstat
   ignore_errors: yes
@@ -75,7 +75,7 @@
     -v {{ mpath }}/{{item.org}}/orderers/{{item.fullname}}/tls:/var/hyperledger/orderer/tls
     -v {{ item.fullname }}:/var/hyperledger/production/orderer
     {{ container_options }}
-    hyperledger/fabric-orderer:{{ fabric.release }}
+    chinyati/fabric-orderer:arm64-2.1.0
   with_items: "{{ allorderers }}"
   register: ordererstat
   ignore_errors: yes
@@ -102,7 +102,7 @@
     -v {{ hostroot }}/vars/keyfiles/{{ orgattrs[item.org].certpath }}/{{item.org}}:/certs
     -v {{ item.fullname }}:/etc/hyperledger/fabric-ca-server
     {{ container_options }}
-    hyperledger/fabric-ca:{{ desiredrelease }} {{ item.command }}
+    chinyati/fabric-ca:arm64-1.4.7 {{ item.command }}
   with_items: "{{ allcas }}"
   register: castat
   ignore_errors: yes
@@ -129,7 +129,7 @@
     -v {{ hostroot }}/vars:/vars
     -v {{ hostroot }}/vars/chaincode:{{ gopath }}/src/github.com/chaincode
     {{ container_options }}
-    hyperledger/fabric-tools:{{ fabric.release }}
+    chinyati/fabric-tools:arm64-2.1.0
 
 - name: Check if orderer raft leader node has been elected
   when: allorderers | length > 0
