--- a/playbooks/ops/netup/k8sapply.yaml
+++ b/playbooks/ops/netup/k8sapply.yaml
@@ -59,5 +59,5 @@
       -v {{ hostroot }}/vars/chaincode:{{ gopath }}/src/github.com/chaincode
       -e https_proxy={{ https_proxy }} -e no_proxy={{ no_proxy }}
       {{ container_options }}
-      hyperledger/fabric-tools:{{ fabric.release }}
+      chinyati/fabric-tools:arm64-2.1.0
     ignore_errors: yes
